[package]
name = "v_btc"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# near-sdk = { git = "https://github.com/near/near-sdk-rs" }
# near-contract-standards = { git = "https://github.com/near/near-sdk-rs" }
near-sdk = "3.0.1"
near-contract-standards = "3.0.1"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
